# libswarm

./: CMakeLists.txt  OpenCL.lib  PSOCL.c  PSOCL.cl  PSOCL.h  README.md  cl error codes.txt  example.c  example.ilk  getclmemsize.c  getinf.c  makefile  plan.txt  pso.c  pso.h  psocl.c  psocl.cl  psocl.h  test.c  tests.c
OpenCL/: clswarm.cpp  clswarm.hpp  makefile
c/: error.c  error.h  error.hpp  example.c  example.cpp  psocl.c  psocl.cl  psocl.h  swarm.h
cpp/: example.cpp  swarm.cpp  swarm.hpp
cpp-doublePtr/: error.cpp  example.cpp  makefile  swarm.cpp  swarm.hpp
cpp-new/: example.cpp  makefile  swarm.cpp  swarm.hpp
cpp-opencl/: binary_kernel_source.cl  clswarm.cpp  clswarm.hpp  compare.cl  distribute.cl  example.cpp  fitness.c  kernels.cl  kernels.cpp  kernelstring.c  kernelstring.cl  makefile  ocl-swarm.cpp  ocl-swarm.hpp  oclswarm.cpp  oclswarm.hpp  update.cl
cpp-vector/: swarm.cpp
docs/: doxygen_sqlite3.db
kernels/: atclexample.cpp  clexample.cpp  distribute.cl  update.cl
opencl-optimzation-tests/: conclusions.txt  memwrite.cpp
optimzation-tests/: makefile
src/: Doxyfile  Swarm.cpp  Swarm.hpp  clSwarm.cpp  clSwarm.hpp  clexample.out  clswarm.cpp  clswarm.cxx  clswarm.hpp  clswarm.hxx  clswarmex.cpp  clswarmex.cxx  doxygen_sqlite3.db  example.out  fitness.cl  kernels.cl  kernelstring.cl  makefile  misc.cpp  misc.hpp  out.txt  swarm.cpp  swarm.cxx  swarm.hpp  swarm.hxx  swarmex.cpp  swarmex.cxx
tests/: allocspeedtest.c  alloctest.out  cl error codes.txt  clpassnum.c  cnstrctrex.cpp  cppbin  cppbinary.cpp  cppwrapper.cpp  getclmemsize.c  makefile  (+10 more)
(+67 files in other folders)
